[RED] Add tests for follow functionality